# fast-api-query

./: .gitignore  README.md  alembic.ini  pyproject.toml
migration/: env.py
migration/versions/: 31cc780be7bb_address_update.py  5e999537f462_add_authuser.py  663e0b49e235_adding_address.py  6fc88d2bb5a3_initiate.py
querysqlalchemy/: load_env.py  main.py
querysqlalchemy/baseClass/: address.py  auth_user.py  role.py  user.py
querysqlalchemy/controller/: auth.py  role.py  user.py
querysqlalchemy/lib/: database.py  dependencies.py  helpers.py
querysqlalchemy/models/: __init__.py  auth.py  base.py  user.py
querysqlalchemy/route/: auth.py  other.py  role.py  user.py
querysqlalchemy/utils/: utility.py
