[tool.poetry]
name = "querysqlalchemy"
version = "0.1.0"
description = ""
authors = ["hamail <mhamail1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
